--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
       안녕하세요. 저의 이름은 이연승입니다. 저의 나이는 30살이며 결혼을 하여 배우자가 있는 사람입니다. 좋아하는것은
       게임이며 좋아하는 음식은 돈까스입니다.
     </p>
+
+    <script></script>
   </body>
 </html>
